--- a/collaborationBackEnd/pom.xml
+++ b/collaborationBackEnd/pom.xml
@@ -28,6 +28,8 @@
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0</version>
+			<scope>system</scope>
+			<systemPath>/home/gopibhaskar/ojdbc8.jar</systemPath>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
