--- a/collaborationControllers/pom.xml
+++ b/collaborationControllers/pom.xml
@@ -15,6 +15,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+	 	<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
 
 		<!-- Dependency of BackEnd in Controllers -->
 		<dependency>
